[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros"] }
base64-url = "2.0.2"
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
sqlb = "0.4.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.6.1"

[dev-dependencies]
serial_test = "3.0.0"
anyhow = "1.0.79"
